# ya

./: .gitignore  .mise.toml  .rtx.toml  Cargo.toml  LICENSE  README.md  build.rs
.config/: ya.yml
.config/docker/: Dockerfile  cc.Dockerfile
.config/ya/: compile.yml  docs.yml  tag.yml  ya.yml
.github/workflows/: build.yml  docs.yml  lint.yml  push.yml  tag-test.yml  tag.yml  test-tag.yml  test.yml
completions/templates/: generated.hbs  ya.fish.hbs
docs/: README.md  build.md  cli.md  completions.md  config.md  init.md  install.md  run.md  shell.md
docs/yadayada/: cli.md
examples/basic/.config/: ya.yml
examples/chdir/: test.txt
examples/chdir/.config/: ya.yml
examples/chdir/dir1/: test.txt
examples/chdir/dir2/: test.txt
examples/chdir/git/: test.txt
examples/docker/.config/: ya.yml
examples/envs/.config/: ya.yml
examples/error/.config/: ya.yml
examples/extra-args/.config/: ya.yml
examples/from/.config/: ya.yml
examples/from/alternate/.config/: ya.yml
examples/from/chained/.config/: ya.yml
examples/from/chained/.config/ya/: chained.yml
examples/from/git/.config/: ya.yml
examples/from/relative/.config/: ya.yml
examples/invalid/full-cmd/.config/: ya.yml
examples/multi-step/.config/: ya.yml
examples/named/.config/ya/: named.yml
examples/python/.config/: ya.yml
examples/sd/.config/: ya.yml
examples/sub/.config/: ya.yml
examples/sub/from/.config/: ya.yml
examples/sub/from/.config/ya/: release.yml
examples/top-level/: ya.yml
src/: build.rs  cli.rs  cmd.rs  completion.rs  config.rs  fs.rs  git.rs  init.rs  lib.rs  main.rs  run.rs  shell.rs  template.rs  validate.rs  ya.rs  yml.rs
src/cli/: mod.rs  ya.rs  yadayada.rs
src/configs/: mod.rs
src/configs/shell/: mod.rs
src/configs/shell/run/: mod.rs
src/configs/shell/shell/: mod.rs
src/handlers/: mod.rs
src/handlers/init/: fs.rs  mod.rs
src/handlers/run/: mod.rs
src/templates/default/: ya.yml.hbs
src/templates/default/docker/: Dockerfile.hbs
src/templates/ya/: ya.yml
templates/docs/: README.md.hbs
templates/docs/.config/: yadayada.yml
templates/docs/docs/yadayada/: cli.md.hbs
tests/: base.rs  basic.rs  build.rs  chdir.rs  config.rs  docker.rs  env.rs  error.rs  execution.rs  extra-args.rs  extra_args.rs  from.rs  init.rs  invalid.rs  multi_step.rs  named.rs  python.rs  run.rs  sd.rs  shell.rs  sub.rs  top-level.rs  yadayada-alias.rs  yadayada-base.rs  yadayada-basic.rs  yadayada-install.rs  yadayada-keys.rs  yadayada-template.rs
