[package]
name = "ya"
version = "0.10.5"
edition = "2021"
default-run = "ya"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
clap = { version = "4.5.16", features = ["derive", "cargo"], optional = true }
clap_complete = { version = "4.5.8", optional = true }
handlebars = { version = "5.1.2", optional = true }
serde_json = { version = "1.0.125", optional = true }

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "cargo"] }
colored = "2.1.0"
serde_yaml = "0.9.34"
home = { version = "0.5.9", optional = true }
clap_complete = { version = "4.5.8", optional = true }
handlebars = {version = "5.1.2", features = ["dir_source"], optional = true }
serde_json = { version = "1.0.125", optional = true }
ignore = { version = "0.4.20", optional = true }
dialoguer = { version = "0.11.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.12.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "ya"
path = "src/bin/ya.rs"

[[bin]]
name = "yadayada"
path = "src/bin/yadayada.rs"
required-features = ["yadayada"]

[features]
completion = ["clap_complete"]
templating = ["handlebars", "serde_json", "ignore", "dialoguer"]
gh-release = ["completion", "templating"]
yadayada = ["completion", "templating", "home"]
